--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1" cellpadding="5" cellspacing="0">
+		<thead>
+			<tr><th>Roll Number</th>
+				<th>Name</th></tr>
+		</thead><tbody>
+			<tr><td>001</td>
+				<td>Damien</td></tr>
+			<tr><td>002</td>
+				<td>Samui</td></tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
